# cdm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPENDENCIES.md  FUTURE.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  install.sh
rust/: .gitignore  AGENTS.md  Cargo.toml  build.rs
rust/assets/: README.md  alpine-rootfs.lock.json  update-alpine-lock.py
rust/guest-init/: Cargo.toml  INTEGRATION.md  README.md  build-static.sh  build-support.rs  schema-v2.json  tests.sh  write-provenance.py
rust/guest-init/build-support/: artifact.rs
rust/guest-init/src/: lib.rs  linux.rs  main.rs
rust/guest-init/tests/: artifact.rs
rust/packaging/: AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  assemble-release.py  check-upstream.sh  create-archive.py  fetch-alpine-sources.sh  generate-provenance.py  generate-sbom.py  guest-init.sh  install.sh  libkrun-relative-firmware.patch  package-alpine-licenses.py  package.sh  prepare-alpine-sources-container.sh  tests.sh  verify-alpine-sources.py  verify-runtime.py  versions.env
rust/packaging/alpine-license-texts/: manifest.json
rust/src/: access.rs  anchored.rs  app.rs  cli.rs  config.rs  guard.rs  invocation.rs  main.rs  monitor.rs  network.rs  origin.rs  process.rs  project.rs  proxy.rs  proxy_bridge.rs  report.rs  sandbox.rs  secrets.rs  setup.rs  stage.rs  status.rs  trusted_exec.rs  workspace.rs  worktree.rs
rust/src/access/: tests.rs
rust/src/app/: tests.rs
rust/src/cli/: tests.rs
rust/src/config/: tests.rs
rust/src/guard/: tests.rs
rust/src/invocation/: lifecycle.rs
rust/src/monitor/: tests.rs
rust/src/network/: tests.rs
rust/src/project/: tests.rs
rust/src/proxy/: tests.rs
rust/src/report/: tests.rs
rust/src/sandbox/: darwin.rs  linux.rs  rootfs.rs  safe_root.rs  tests.rs  vm.rs
rust/src/secrets/: tests.rs
rust/src/setup/: tests.rs
rust/src/stage/: tests.rs
rust/src/workspace/: tests.rs
rust/src/worktree/: tests.rs
rust/tests/: AGENTS.md  README.md  argv_bytes_probe.py  integration.sh  run_with_timeout.py  setup_pty.py  test_validate_documentation.py  validate_documentation.py
rust/tests/fixture/: .env  README.md  hello.sh
rust/tests/suites/: 02_vm.sh  (+19 more)
(+30 files in other folders)
