[package]
name = "cdm"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
authors = ["CDM Contributors"]
description = "CDM - Opinionated OS-native sandboxing for developer workflows"
license = "MIT"

[[bin]]
name = "cdm"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

# MITM proxy (hudsucker)
hudsucker = { version = "0.25.0", default-features = false, features = ["rcgen-ca", "rustls-client"] }
http-body-util = "0.1.4"
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "native-tokio", "rustls-native-certs", "tls12"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time", "fs", "io-util"] }
tower-service = "0.3.3"

# VM sandbox (libkrun microVM) — only with --features vm
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"], optional = true }
tar = { version = "0.4.46", optional = true }
flate2 = { version = "1.1.9", optional = true }

[build-dependencies]
pkg-config = "0.3.33"
libc = "0.2.186"
serde_json = "1.0.150"
sha2 = "0.10.9"

[features]
default = []
vm = ["oci-client", "tar", "flate2"]

[profile.release]
opt-level = 3
lto = true
strip = true

[patch.crates-io]
# Security patch: when CDM requests CONNECT interception, unknown protocol
# bytes must not silently downgrade to an opaque tunnel while secrets exist.
hudsucker = { path = "vendor/hudsucker-0.25.0" }
